--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 jobs:
     build:
         name: Build Docker image
-        runs-on: ubuntu-latest # specify the build machine
+        runs-on: ubuntu-latest
         steps:
           -
             name: Checkout
