--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,4 @@ jobs:
               context: .
               push: true
               target: prod
-              tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+              tags: ${{ secrets.DOCKER_USERNAME }}
