--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: docker-git-cicd-test
+name: ci
 
 on: 
   push:
@@ -28,4 +28,4 @@ jobs:
               context: .
               push: true
               target: prod
-              tags: ${{ secrets.DOCKER_USERNAME }}:latest
+              tags: docker-git-cicd-test/ci:latest
