--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
             name: Set up Docker Buildx
             uses: docker/setup-buildx-action@v3
           - # there is now way to compose services right now, only image by image with bake, returning here later
-            name: Build and push
-            uses: docker/build-push-action@v5
-            with:
-              context: .
-              push: true
-              target: prod
-              tags: docker-git-cicd-test/ci:latest
+            name: Build and push images
+            run: |
+              for file in $(find . -maxdepth 2 -name "*.dockerfile"); do
+                image_name=$(basename ${file%.*})
+                docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$image_name:latest -f "$file" .
+                docker push yur0n/$image_name:latest
+              done
