--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,27 +5,16 @@ on:
     branches:
       - "main"
 jobs:
-    build:
-        name: Build Docker image
-        runs-on: ubuntu-latest
-        steps:
-          -
-            name: Checkout
-            uses: actions/checkout@v4
-          -
-            name: Login to Docker Hub
-            uses: docker/login-action@v3
-            with:
-              username: ${{ secrets.DOCKERHUB_USERNAME }}
-              password: ${{ secrets.DOCKERHUB_TOKEN }}
-          - 
-            name: Set up Docker Buildx
-            uses: docker/setup-buildx-action@v3
-          - # there is now way to compose services right now, only image by image with bake, returning here later
-            name: Build and push images
-            run: |
-              for file in $(find . -maxdepth 2 -name "*.dockerfile"); do
-                image_name=$(basename ${file%.*})
-                docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$image_name:latest -f "$file" .
-                docker push yur0n/$image_name:latest
-              done
+  build-and-run:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install Docker Compose
+        uses: docker/compose@v3
+      - name: Login to Docker Hub (if needed)
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and run services
+        run: docker compose up -d
