--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install Docker Compose
-        uses: docker/compose@v2
-      - name: Login to Docker Hub (if needed)
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and run services
-        run: docker compose up -d
+      - uses: isbang/compose-action@v1.5.1
+        with:
+          compose-file: "./compose.yaml"
